--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,6 +2,30 @@
 @import "tailwindcss";
 @import "tw-animate-css";
 
+ 
+@keyframes fadeIn {
+  from { opacity: 0; }
+  to { opacity: 1; }
+}
+
+.x-arrow-1 {
+  animation: fadeIn 2s ease-in-out infinite;
+  animation-delay: 0.2s;
+}
+.x-arrow-2 {
+  animation: fadeIn 0.8s ease-in forwards infinite;
+  animation-delay: 0.4s;
+}
+.x-arrow-3 {
+  animation: fadeIn 0.8s ease-in forwards infinite;
+  animation-delay: 0.6s;
+}
+.x-arrow-4 {
+  animation: fadeIn 0.8s ease-in forwards infinite;
+  animation-delay: 0.8s;
+}
+
+
 @custom-variant dark (&:is(.dark *));
 
 :root {
